# LLMSurgeon

./: .gitignore  CITATION.cff  LICENSE  README.md  benchmark_evaluation.py  download_olmocr_pdfs.py  environment.yml  fetch_olmo3_samples.py  pyproject.toml
baseline_method/src/labelshift/: classifier.py  data_utils.py  data_utils_pythia.py  generate.py  run_dcpdd_threshold.py  run_dcpdd_threshold_pythia.py  run_dcpdd_threshold_starcoder.py  run_duci_categories.py  run_duci_categories_pythia.py  run_duci_categories_starcoder.py  run_duci_starcoder.py  run_labelshift.py  run_labelshift_closedapi.py  run_labelshift_olmo3.py  run_labelshift_pythia.py  run_mink_threshold.py  run_mink_threshold_pythia.py  run_mink_threshold_starcoder.py  run_mink_threshold_starcoder_ddp.py  run_minkpp_threshold.py  run_minkpp_threshold_pythia.py  run_minkpp_threshold_starcoder.py  run_minkpp_threshold_starcoder_ddp.py  run_neighborhood_threshold.py  run_neighborhood_threshold_pythia.py  run_neighborhood_threshold_starcoder.py  run_recall_threshold.py  run_recall_threshold_pythia.py  run_recall_threshold_starcoder.py  run_zlib_threshold.py  run_zlib_threshold_pythia.py  (+1 more)
bench/specs/: olmo3.yaml  pythia.yaml  pythia_merged.yaml
exp_scripts/: Amber-13B.sh  LLaMA1-7B.sh  OLMo-1B.sh  README.md  closedapi.sh  dcpdd.sh  duci_amber.sh  duci_llama.sh  duci_olmo.sh  duci_pythia.sh  duci_starcoder.sh  evaluation.sh  mink.sh  minkpp.sh  neighborhood.sh  olmo3.sh  pythia.sh  recall.sh  starcoder_mink.sh  starcoder_mink_ddp.sh  starcoder_minkpp.sh  starcoder_minkpp_ddp.sh  zlib.sh
